schwache Gleichung und Randbedingungen Wärme

--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -162,7 +162,7 @@
     "\\sigma j \\omega A_\\phi - \\left( \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) + \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) \\right) = j_\\phi\n",
     "$$\n",
     "\n",
-    "Die schwache Formulierung ergibt sich, indem man beide Seiten mit einer Testfunktion  $v \\in H^1$ (komplexwertiger FE-Raum) multipliziert und über das Volumen  $\\Omega$ integriert:\n",
+    "Die schwache Formulierung ergibt sich, indem man beide Seiten mit einer Testfunktion  $v \\in H^1$ (komplexwertiger FE-Raum) multipliziert und über das Gebiet  $\\Omega$ integriert:\n",
     "\n",
     "$$\n",
     "\\int_\\Omega \\left( \\sigma j \\omega A_\\phi v - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v - \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) v \\right) \\, d\\Omega = \\int_\\Omega j_\\phi v \\, d\\Omega\n",
