--- a/Notebook/Aufgabe2.ipynb
+++ b/Notebook/Aufgabe2.ipynb
@@ -300,12 +300,79 @@
    "metadata": {},
    "source": [
     "## Schwache Gleichung\n",
-    "Die stationäre Lösung der Wärmeleitungsgleichung erfüllt die elliptischen Diﬀe-\n",
-    "rentialgleichung\n",
+    "### Vereinfachung der Wärmeleitungsgleichung\n",
+    "Die vollständige Wärmeleitungsgleichung ist gebeben durch\n",
     "\n",
-    "$$ \\text{div}(\\lambda \\nabla T) = q$$\n",
+    "$$ \\underbrace{C_p \\rho \\dot{T}}_{\\text{Zeitabhängigkeit}} - \\text{div}(\\lambda \\nabla T) + \\underbrace{\\nabla T \\cdot \\mathbf{v}}_{\\text{Konvektion}} = q.$$\n",
     "\n",
-    "mit Dirichlet-Randbedingung am äusseren Rand $T(x)=0$ "
+    "Hier wird der konvektive Wärmetransport gegeben durch das Strömungsfeld $\\mathbf{v}$ vernachlässigt. Ausserdem interessiert nur die stationäre Lösung, die zeitabhängige Komponente kann daher auch vernachlässigt werden. \n",
+    "\n",
+    "Für die  stationäre Lösung der Wärmeleitungsgleichung bleibt die elliptischen Diﬀerentialgleichung\n",
+    "\n",
+    "$$ -\\text{div}(\\lambda \\nabla T) = q.$$\n",
+    "\n",
+    "### Randbedingungen\n",
+    "Es wird zwischen drei Arten von Randbedingungen unterschieden.\n",
+    "#### Dirichlet-Randbedingung\n",
+    "Mit einer Dirichlet-Randbedingung liegt am Rand eine konstante Temperatur (hier 0°C) vor:\n",
+    "$$ T(x) = 0, \\quad x\\in \\partial\\Omega$$\n",
+    "\n",
+    "#### Neumann-Randbedingung\n",
+    "Mit einer Neumann-Randbedingung wird der Fluss durch den Rand vorgegeben. Im Fall von perfekter Temperaturisolation, also kein Fluss durch die Oberfläche, sieht die Bedingung folgendermassen aus:\n",
+    "$$   \\frac{\\partial T}{\\partial n} = \\nabla T \\cdot n =0, \\quad x\\in \\partial\\Omega$$\n",
+    "\n",
+    "#### Robin-Randbedingung\n",
+    "Eine teilweise Isolation kann mit einer Robin-Randbedingung modelliert werden, die ein Zusammenhang zwischen der Temperatur und dem Temperaturfluss herstellt. Hier impliziert, dass der Fluss direkt proportional zur Temperatur ist. Anders ausgedrückt fliesst an den heissen Stellen auch mehr Wärme durch die teilweise Isolation ab als an den kühlen Stellen.\n",
+    "\n",
+    "$$  \\nabla T \\cdot n = - \\alpha T, \\quad x\\in \\partial\\Omega$$\n",
+    "\n",
+    "Das Minus kommt daher, dass bei positiver Temperatur der Fluss $\\nabla T \\cdot n$ negativ ist (Wärme fliesst aus dem Gebiet heraus).\n",
+    "Der Parameter $\\alpha$ bestimmt, wie gut die Isolation ist. Je tiefer $\\alpha$, desto besser die Isolation. Im Grenzfall $\\alpha \\rightarrow 0$ besteht kein Fluss, also die Neumann-Randbedingungung. Im anderen Grenzfall $\\alpha \\rightarrow \\infty$ liegt die Dirichlet-Randbedingung vor."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4012fcf2-3a86-4776-9940-bbf35d22b497",
+   "metadata": {},
+   "source": [
+    "### Herleitung schwache Gleichung\n",
+    "Wie bereits erwähnt wird die folgende PDE für die stationäre Wärmeverteilung verwendet:\n",
+    "\n",
+    "$$ -\\text{div}(\\lambda \\nabla T)  = q.$$\n",
+    "\n",
+    "Die schwache Formulierung ergibt sich, indem man beide Seiten mit einer Testfunktion  $v \\in H^1$ (FE-Raum) multipliziert und über das Gebiet  $\\Omega$ integriert:\n",
+    "\n",
+    "$$\n",
+    "\\int_\\Omega - \\text{div}(\\lambda \\nabla T) \\cdot v  \\, d\\Omega = \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "$$\n",
+    "\n",
+    "Man beachte, dass $\\lambda$ vom Ort abhängig ist.\n",
+    "Der Term mit der Divergenz $\\text{div}(\\lambda \\nabla T)$ könnte als $\\nabla \\cdot (\\lambda \\nabla T)$ geschrieben werden. Dies zeigt, dass die zweite Ableitung der Temperatur vorkommt. Daher verwenden wir für die linke Seite die partielle Integration im Mehrdimensionalen (Satz von Gauss):\n",
+    "\n",
+    "$$\n",
+    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega - \\int_{\\partial\\Omega} \\lambda \\underbrace{\\nabla T \\cdot n}_{\\frac{\\partial T}{\\partial n}}\\, v\\, ds= \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "$$\n",
+    "\n",
+    "Nun kommen die Randbedingungen ins Spiel.\n",
+    "\n",
+    "Für **Dirichlet-Randbedingungen** $T(x)=0$ wird für den FE-Raum gefordert, dass er auf dem Rand verschwindet, also $v \\in H_0^1$. Dadurch entfällt das Randintegral in der schwachen Gleichung. \n",
+    "\n",
+    "$$\n",
+    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega = \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "$$\n",
+    "\n",
+    "Für **Neumann-Randbedingungen** $\\nabla T \\cdot n =0$ gilt für die Testfunktion$v \\in H^1$. Das Randintegral in der schwachen Gleichung entfällt, weil die Normalenableitung der Temperatur gleich Null ist.. \n",
+    "\n",
+    "$$\n",
+    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega = \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "$$\n",
+    "\n",
+    "Für **Robin-Randbedingungen** $\\nabla T \\cdot n = - \\alpha T$ wird in der schwachen Gleichung $\\nabla T \\cdot n$ durch $- \\alpha T$ ausgedrückt. Das Randintegral gehört zur Bilinearform, weil $T$ darin vorkommt.\n",
+    "Für die Testfunktion gilt $v\\in H^1$.\n",
+    "\n",
+    "$$\n",
+    "\\int_\\Omega \\lambda \\nabla T \\cdot \\nabla v  \\, d\\Omega - \\int_{\\partial\\Omega} \\lambda \\underbrace{(-\\alpha T)}_{\\frac{\\partial T}{\\partial n}}\\, v\\, ds= \\int_\\Omega q\\, v \\, d\\Omega\n",
+    "$$\n"
    ]
   },
   {
