--- a/Notebook/Aufgabe1.ipynb
+++ b/Notebook/Aufgabe1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('rotsym', 'outer_right', 'outer_top', 'outer_left', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner')\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2c41cc4f2174f7380360bb8a5478db0",
+       "model_id": "47726933199641c59b297940438d828c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,11 +100,14 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('rotsym', 'outer_right', 'outer_top', 'outer_left', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner', 'inner')\n"
-     ]
+     "data": {
+      "text/plain": [
+       "BaseWebGuiScene"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -132,12 +142,12 @@
     "geo.SetDomainMaxH(3,(rA_core-rI_core)/2)\n",
     "\n",
     "mesh = Mesh(geo.GenerateMesh(maxh=0.0025))\n",
+    "print(mesh.GetBoundaries())\n",
     "\n",
     "# Visualisierung\n",
     "mat_mapping = {name: i+1 for i, name in enumerate(mesh.GetMaterials())}\n",
     "cf = mesh.MaterialCF(mat_mapping)\n",
-    "Draw(cf, mesh, \"material_colors\")\n",
-    "print(mesh.GetBoundaries())"
+    "Draw(cf, mesh, \"material_colors\")"
    ]
   },
   {
@@ -202,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af305ace9d15419eac06c87531cda763",
+       "model_id": "13c248b2c6564c3280eb0acdec89b3b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -244,7 +254,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "118e549ffc03411ca8bf4ca263e78212",
+       "model_id": "77baf56611d74b2fa6232e089f4549dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a95851aa62b4a8b8ff49c23dd95cc65",
+       "model_id": "12472c356db342289bfc4ac196473992",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,7 +353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73db8c34b2b84e1ebfa4fcb289586a76",
+       "model_id": "de045f2a24a749748ddd6a2e021cfe74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1888369eb83246548c9e4d9a590ef37b",
+       "model_id": "faa184ee3b344a34bf6860c9d93f5769",
        "version_major": 2,
        "version_minor": 0
       },
@@ -381,7 +391,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,13 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72566b56e1ee4892b44c33c5bd6988da",
+       "model_id": "fca0955dd122460696ab64170c9eeec6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,7 +650,7 @@
        "BaseWebGuiScene"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,13 +667,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c03a6025639c4ca68f614a397214a773",
+       "model_id": "bffbce760b6d403c8c1492b90a0f6fae",
        "version_major": 2,
        "version_minor": 0
       },
