--- a/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
+++ b/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
@@ -13,7 +13,115 @@
    "id": "84edfb7e-fb63-463b-9b38-39cb574e6026",
    "metadata": {},
    "source": [
-    "*Mehr Grundlagen ergänzen, auf Randbedingungen eingehen*\n"
+    "Der Herleitung der rotationssymmetrischen Differentialgleichung fürs Vektorpotential folgt der Aufgabenstellung {cite:p}`Stingelin2025HANAProjekt`.\n",
+    "\n",
+    "\n",
+    "*Mehr Grundlagen ergänzen, auf Randbedingungen eingehen*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e13b77b-d824-4b7e-a9d8-a81738e62b21",
+   "metadata": {},
+   "source": [
+    "## Vereinfachung Maxwell-Gleichungen\n",
+    "### Maxwell-Gleichungen\n",
+    "Das elektromagnetische Feld kann mit Hilfe der Maxwell-Gleichungen beschrieben werden.\n",
+    "Für die niederfrequente Anwendung wird die harmonische Wirbelstromgleichung\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "  \\sigma j\\omega \\mathbf{A} + \\text{curl}\\mu^{-1}\\text{curl}\\mathbf{A} + \\sigma\\nabla\\varphi = \\mathbf{j}_{\\text{ext}} \\qquad & \\text{für  } x \\in \\Omega_{\\sigma>0} \\quad &\\text{(a)}\\\\\n",
+    "  \\text{div}(\\sigma j\\omega \\mathbf{A} + \\sigma\\nabla\\varphi) = \\text{div}(\\mathbf{j}_{\\text{ext}}) \\qquad & \\text{für  } x \\in \\Omega_{\\sigma>0} \\quad &\\text{(b)} \\\\\n",
+    "  \\text{curl}\\mu^{-1}\\text{curl}\\mathbf{A} = \\mathbf{j}_{\\text{ext}} \\qquad & \\text{für  } x \\in \\Omega_{\\sigma=0}  \\quad &\\text{(c)}\n",
+    "\\end{align*}$$(eq:maxwell)\n",
+    "\n",
+    "benutzt, wobei mit $\\mathbf{A}$ das Vektorpotential und mit $\\varphi$ das skalare Potential bezeichnet werden. \n",
+    "\n",
+    "Aus dem Vektorpotential und dem skalaren Potential kann die magnetische Flussdichte $\\mathbf{B}$ und das elektrische Feld $\\mathbf{E}$ abgeleitet werden. Es gilt\n",
+    "\n",
+    "$$ \\mathbf{B} = \\text{curl}\\mathbf{A} $$(eq:BausA)\n",
+    "\n",
+    "und\n",
+    "\n",
+    "$$ \\mathbf{E} = -\\sigma j\\omega \\mathbf{A} - \\nabla\\varphi. $$(eq:EausA)\n",
+    "\n",
+    "### Zeitabhängige Lösung\n",
+    "Die zeitabhängige Lösung ist gegeben durch\n",
+    "\n",
+    "$$ \\mathbf{A}(t, x) = \\mathbf{A}(x) \\cdot e^{j\\omega t} $$(eq:Azeit)\n",
+    "\n",
+    "mit $\\omega = 2\\pi f$ und $j = \\sqrt{-1}$.\n",
+    "\n",
+    "### Stromdichte\n",
+    "Die Stromdichte $\\mathbf{J}$ kann in zwei Komponenten aufgeteilt werden. Es gilt\n",
+    "\n",
+    "$$ \\mathbf{J} = \\mathbf{J}_{\\text{int}} + \\mathbf{J}_{\\text{ext}} $$\n",
+    "\n",
+    "mit der induzierten Stromdichte $\\mathbf{J}_{\\text{int}}$ (Wirbelströme) und der externen Stromdichte $\\mathbf{J}_{\\text{ext}}$.\n",
+    "Die externe Stromdichte ist zum Beispiel gegeben durch eine Stromquelle, mit welcher die Spulen getrieben werden.\n",
+    "\n",
+    "### Regularisierung Wirbelstromproblem\n",
+    "Für dreidimensionale Geometrien ist es in der Regel nicht möglich, sämtliche Windungen im Mesh aufzulösen. \n",
+    "Unter Vernachlässigung von Proximity- und Skineffekt in den Windungen folgt mit $0 < \\kappa < 1$ das regularisierte Wirbelstromproblem\n",
+    "\n",
+    "$$ \\sigma j\\omega \\mathbf{A} + \\text{curl}\\mu^{-1}\\text{curl}\\mathbf{A} + \\kappa\\mathbf{A} = \\mathbf{j}_{\\text{ext}} \\quad \\text{für } x \\in \\Omega. \\quad \\text{(2)} $$(eq:WirbelstromRegularisiert)\n",
+    "\n",
+    "wobei der Term $\\sigma\\nabla\\varphi$ aus Gleichung {eq}`eq:maxwell` Teil (a) durch $\\kappa\\mathbf{A}$ ersetzt wurde.\n",
+    "\n",
+    "### Stromdichte bei gegebener Stromquelle\n",
+    "Für den Fall, dass eine **Stromquelle** gegeben ist, gilt\n",
+    "\n",
+    "$$ \\mathbf{J}_{\\text{ext}} = \\frac{N_c\\, i_c}{A_c} \\mathbf{w}(x), $$(eq:JextStromquelle)\n",
+    "\n",
+    "mit Anzahl Windungen $N_c$, Strom in den Windungen $i_c$ und der Querschnittsfläche $A_c$, wobei $\\mathbf{w}(x)$ eine vektorielle, räumliche Verteilungsfunktion ist. Sie enthält die geometrische Information darüber, wo sich die Spulenwindungen befinden und in welche Richtung der Strom $i_c$ an einem Punkt $x$ durch diese Windungen fliesst.\n",
+    "\n",
+    "### Problemstellung bei gegebener Spannungsquelle\n",
+    "Für den Fall, dass eine **Spannungsquelle** gegeben ist, folgt aus dem Induktionsgesetz die Kopplung zwischen Strom und Spannung in den Windungen. Es gilt\n",
+    "\n",
+    "$$ j\\omega\\Psi + R_c i_c = u_c. $$\n",
+    "\n",
+    "Damit folgt das gekoppelte Problem\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "  \\sigma j\\omega \\mathbf{A} + \\text{curl}\\mu^{-1}\\text{curl}\\mathbf{A} + \\kappa\\mathbf{A} -\\frac{N_c\\, i_c}{A_c} \\mathbf{w}(x) &= 0 \\quad \\text{für } x \\in \\Omega\\\\\n",
+    "  j\\omega\\Psi + R_c i_c &= u_c.\n",
+    "  \\end{align*}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cd71f08-36a6-4edb-b869-0584fc82f0ab",
+   "metadata": {},
+   "source": [
+    "## Rotationssymmetrische Gleichung\n",
+    "\n",
+    "Für rotationssymmetrische Geometrien können in der Regel die Windungen im Mesh aufgelöst werden. Wir betrachten daher das Problem {eq}`eq:maxwell` in Zylinderkoordinaten $(z, r, \\phi)$. In diesem Fall gilt\n",
+    "\n",
+    "$$ \\mathbf{A} = \\begin{pmatrix} A_z \\\\ A_r \\\\ A_\\phi \\end{pmatrix} $$\n",
+    "\n",
+    "wobei $A_z = A_r = 0$. Das Vektorpotential ist daher gegeben durch die skalare Komponente $A_\\phi$. Damit folgt für \n",
+    "\n",
+    "$$ \\sigma j\\omega A_\\phi - \\left( \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial}{\\partial r} (r A_\\phi) \\right) + \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) \\right) = j_\\phi. \\quad \\text{(4)} $$(eq:Arotsym)\n",
+    "\n",
+    "Für die magnetische Flussdichte gilt in dem Fall in Anlehnung an {eq}`eq:BausA`\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "B_r &= -\\frac{\\partial A_\\phi}{\\partial z} \\\\\n",
+    "B_z &= \\frac{1}{r} \\frac{\\partial (r A_\\phi)}{\\partial r}\n",
+    "\\end{align*}$$(eq:Brotsym)\n",
+    "\n",
+    "Das elektrische Feld ist orthogonal zum Magnetfeld und zeigt in $\\phi$-Richtung. Damit folgt aus {eq}`eq:EausA`\n",
+    "\n",
+    "$$ E_z = -j\\omega A_\\phi. $$\n",
+    "\n",
+    "Die natürliche Symmetriebedingung auf der Rotationsachse ist gegeben durch\n",
+    "\n",
+    "$$ A_\\phi = 0. $$(Asymbedingung)\n",
+    "\n",
+    "\n",
+    "Im rotationssymmetrischen Modell, mit den einzelnen Windungen modelliert, folgt für die Stromdichte $j_\\phi$\n",
+    "\n",
+    "$$ j_\\phi = \\frac{i_c}{r^2\\pi}. $$(eq:Jrotsym)"
    ]
   },
   {
@@ -38,8 +146,8 @@
     "$$ \\frac{\\partial (r A_\\phi)}{\\partial r}=A_\\phi + r \\frac{\\partial (A_\\phi)}{\\partial r} \\quad (Produktregel)$$\n",
     "\n",
     "$$\n",
-    "\\int_\\Omega - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v \\, d\\Omega = \\underbrace{ \\left[ - \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} v \\right]_{\\partial\\Omega}}_{=0} +\n",
-    "\\int_\\Omega \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\frac{\\partial v}{\\partial r} \\, d\\Omega =  \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega \n",
+    "\\begin{aligned} \\int_\\Omega - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v \\, d\\Omega &= \\underbrace{ \\left[ - \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} v \\right]_{\\partial\\Omega}}_{=0} +\n",
+    "\\int_\\Omega \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\frac{\\partial v}{\\partial r} \\, d\\Omega \\\\ &=  \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega  \\end{aligned}\n",
     "$$\n",
     "\n",
     "Die partielle Integration wird auch aufs Teilintegral mit zwei Ableitungen nach $z$ angewendet.\n",
