--- a/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
+++ b/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
@@ -129,6 +129,7 @@
    "id": "8c62c9fb-f79b-460a-8c58-22a4c59445fe",
    "metadata": {},
    "source": [
+    "## Herleitung schwache Gleichung\n",
     "Die Differentialgleichung lautet:\n",
     "\n",
     "$$\n",
