--- a/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
+++ b/hana_project_book/Wirbelstromproblem/Formulierung.ipynb
@@ -13,8 +13,7 @@
    "id": "84edfb7e-fb63-463b-9b38-39cb574e6026",
    "metadata": {},
    "source": [
-    "Der Herleitung der rotationssymmetrischen Differentialgleichung fürs Vektorpotential folgt der Aufgabenstellung {cite:p}`Stingelin2025HANAProjekt`.\n",
-    "\n",
+    "Der Herleitung der rotationssymmetrischen Differentialgleichung folgt der Aufgabenstellung {cite:p}`Stingelin2025HANAProjekt`.\n",
     "\n",
     "*Mehr Grundlagen ergänzen, auf Randbedingungen eingehen*"
    ]
@@ -71,14 +70,16 @@
     "### Stromdichte bei gegebener Stromquelle\n",
     "Für den Fall, dass eine **Stromquelle** gegeben ist, gilt\n",
     "\n",
-    "$$ \\mathbf{J}_{\\text{ext}} = \\frac{N_c\\, i_c}{A_c} \\mathbf{w}(x), $$(eq:JextStromquelle)\n",
+    "$$ \\mathbf{J}_{\\text{ext}} = \\frac{N_c\\, i_c}{A_c} \\mathbf{w}(x) $$(eq:JextStromquelle)\n",
     "\n",
     "mit Anzahl Windungen $N_c$, Strom in den Windungen $i_c$ und der Querschnittsfläche $A_c$, wobei $\\mathbf{w}(x)$ eine vektorielle, räumliche Verteilungsfunktion ist. Sie enthält die geometrische Information darüber, wo sich die Spulenwindungen befinden und in welche Richtung der Strom $i_c$ an einem Punkt $x$ durch diese Windungen fliesst.\n",
     "\n",
     "### Problemstellung bei gegebener Spannungsquelle\n",
     "Für den Fall, dass eine **Spannungsquelle** gegeben ist, folgt aus dem Induktionsgesetz die Kopplung zwischen Strom und Spannung in den Windungen. Es gilt\n",
     "\n",
-    "$$ j\\omega\\Psi + R_c i_c = u_c. $$\n",
+    "$$ j\\omega\\Psi + R_c i_c = u_c, $$\n",
+    "\n",
+    "wobei $\\Psi$ der verkettete magnetische Fluss ist.\n",
     "\n",
     "Damit folgt das gekoppelte Problem\n",
     "\n",
@@ -99,11 +100,11 @@
     "\n",
     "$$ \\mathbf{A} = \\begin{pmatrix} A_z \\\\ A_r \\\\ A_\\phi \\end{pmatrix} $$\n",
     "\n",
-    "wobei $A_z = A_r = 0$. Das Vektorpotential ist daher gegeben durch die skalare Komponente $A_\\phi$. Damit folgt für \n",
+    "wobei $A_z = A_r = 0$. Das Vektorpotential ist daher gegeben durch die skalare Komponente $A_\\phi$. Damit folgt für {eq}`eq:maxwell` die Differentialgleichung\n",
     "\n",
-    "$$ \\sigma j\\omega A_\\phi - \\left( \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial}{\\partial r} (r A_\\phi) \\right) + \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) \\right) = j_\\phi. \\quad \\text{(4)} $$(eq:Arotsym)\n",
+    "> $$ \\sigma j\\omega A_\\phi - \\left( \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) + \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) \\right) = j_\\phi.$$(eq:Arotsym)\n",
     "\n",
-    "Für die magnetische Flussdichte gilt in dem Fall in Anlehnung an {eq}`eq:BausA`\n",
+    "Für die magnetische Flussdichte $\\mathbf{B}$ gilt in dem Fall in Anlehnung an {eq}`eq:BausA`\n",
     "\n",
     "$$\\begin{align*}\n",
     "B_r &= -\\frac{\\partial A_\\phi}{\\partial z} \\\\\n",
@@ -112,11 +113,11 @@
     "\n",
     "Das elektrische Feld ist orthogonal zum Magnetfeld und zeigt in $\\phi$-Richtung. Damit folgt aus {eq}`eq:EausA`\n",
     "\n",
-    "$$ E_z = -j\\omega A_\\phi. $$\n",
+    "$$ E_z = -j\\omega A_\\phi. $$(eq:Erotsym)\n",
     "\n",
     "Die natürliche Symmetriebedingung auf der Rotationsachse ist gegeben durch\n",
     "\n",
-    "$$ A_\\phi = 0. $$(Asymbedingung)\n",
+    "$$ A_\\phi = 0. $$(eq:Asymbedingung)\n",
     "\n",
     "\n",
     "Im rotationssymmetrischen Modell, mit den einzelnen Windungen modelliert, folgt für die Stromdichte $j_\\phi$\n",
@@ -126,25 +127,77 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0141e4bb-6637-41a5-92c7-f8fe611676c8",
+   "metadata": {},
+   "source": [
+    "## Herleitung schwache Gleichung\n",
+    "### Testen und Integrieren\n",
+    "Die schwache Formulierung ergibt sich, indem man beide Seiten der Differentialgeleichung {eq}`eq:Arotsym` mit einer Testfunktion  $v \\in H^1$ (komplexwertiger FE-Raum) multipliziert und über das Gebiet  $\\Omega$ integriert:\n",
+    "\n",
+    "$$\n",
+    "\\int_\\Omega \\left( \\sigma j \\omega A_\\phi v - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v - \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) v \\right) \\, d\\Omega = \\int_\\Omega j_\\phi v \\, d\\Omega\n",
+    "$$(eq:IntAndv)\n",
+    "\n",
+    "Das Teilintegral mit zwei Ableitungen nach $r$ lässt sich durch partielle Integration und die Produktregel vereinfachen. Im Randintegral wird der Zusammenhang aus Gleichung {eq}`eq:Brotsym` verwendet. $n_r$ bezeichnet die $r$-Komponente des Normalenvektors.\n",
+    "\n",
+    "$$ \\frac{\\partial (r A_\\phi)}{\\partial r}=A_\\phi + r \\frac{\\partial (A_\\phi)}{\\partial r} \\quad \\text{(Produktregel)}$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned} \\int_\\Omega - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v \\, d\\Omega &= \\int_\\Omega \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\frac{\\partial v}{\\partial r} \\, d\\Omega - \\int_{\\partial\\Omega} \\mu^{-1}\\, \\underbrace{\\frac{1}{r} \\frac{\\partial (r A_\\phi)}{\\partial r}}_{B_z}\\, n_r \\, v\\,  ds \\\\ &=  \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega - \\int_{\\partial\\Omega} \\mu^{-1}\\, B_z\\, n_r\\, v \\, ds\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Die partielle Integration wird auch aufs Teilintegral mit zwei Ableitungen nach $z$ angewendet. Im Randintegral wird auch hier der Zusammenhang aus Gleichung {eq}`eq:Brotsym` verwendet. $n_z$ bezeichnet die $z$-Komponente des Normalenvektors.\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\int_\\Omega - \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) v \\, d\\Omega &= \\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega - \\int_{\\partial\\Omega} \\mu^{-1}\\, \\underbrace{\\frac{\\partial A_\\phi}{\\partial z}}_{-B_r}\\, n_z\\, v\\, ds \\\\\n",
+    "&= \\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega + \\int_{\\partial\\Omega}  \\mu^{-1}\\, B_r\\, n_z\\, v\\, ds \n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Nun wird dies in Gleichung {eq}`eq:IntAndv` eingesetzt:\n",
+    "\n",
+    "$$ \\begin{aligned} \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega \\\\ \\qquad + \\int_{\\partial\\Omega} \\mu^{-1} \\left( B_r n_z\\, - B_z n_r\\right)\\, v \\, ds =  \\int_\\Omega j_\\phi v \\, d\\Omega \\end{aligned}$$(eq:schwacheGlgmitRand)\n",
+    "\n",
+    "### Randbedingungen\n",
+    "Übers Randintegral kommen die Randbedingungen ins Spiel. Auf der Rotationsachse (unten) ist gemäss Gleichung {eq}`eq:Asymbedingung` eine Dirichlet-Randbedingung gegeben, daher $v = 0\\quad \\forall x \\in \\partial\\Omega_{\\text{rotsym}}$. Das Randintegral verschwindet auf der Rotationsachse also. \n",
+    "\n",
+    "Auf den restlichen Randabschnitten (links, rechts, oben) ist $v$ nicht zwingend 0. Hier ist der Flussterm $\\mu^{-1} \\left( B_r n_z\\, - B_z n_r\\right)$ relevant, der aus der Partiellen Integration natürlicherweise hervorgeht. Homogene Neumann-Randbedingungen liegen vor, wenn man diesen Term gleich Null setzt. Dadurch entfällt das Randintegral. Für das resultierende $\\mathbf{B}$-Feld ist folgendes zu erwarten:\n",
+    "\n",
+    "| Rand                | $B_r$         | Begründung für $B_r$         | $B_z$         | Begründung für $B_z$         |\n",
+    "|---------------------|---------------|------------------------------|---------------|------------------------------|\n",
+    "| Rechter/Linker Rand | $0$           | $n_z \\neq 0$                 | beliebig    | $n_r = 0$                    |\n",
+    "| Oberer Rand         | beliebig     | $n_z = 0$                    | $0$           | $n_r \\neq 0$                 |\n",
+    "\n",
+    "### Schwache Gleichung\n",
+    "Mit den beschriebenen Randbedingungen (Dirichlet-Randbedingung auf Rotationsachse, homogene Neumann-Randbedingung auf restlichen Randabschnitten) folgt aus {eq}`eq:schwacheGlgmitRand` die folgende schwache Gleichung\n",
+    "\n",
+    "> $$ \\underbrace{ \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega }_{\\text{Bilinearform } a(A_\\phi, v)} = \\underbrace{ \\int_\\Omega j_\\phi v \\, d\\Omega }_{\\text{Linearform }  f(v)}, \\quad \\forall v \\in H^1 \\,|\\, v=0 \\text{ auf } \\partial\\Omega_{\\text{rotsym}}$$(eq:schwacheGlgWirbelstrom)\n",
+    "\n",
+    "wobei die Bilinearform  $a(A_\\phi, v)$  durch die Terme\n",
+    "\n",
+    "$$\n",
+    "a(A_\\phi, v) = \\int_\\Omega \\sigma j \\omega A_\\phi v \\, d\\Omega + \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega  + \\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega\n",
+    "$$\n",
+    "\n",
+    "definiert ist."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c62c9fb-f79b-460a-8c58-22a4c59445fe",
    "metadata": {},
    "source": [
     "## Herleitung schwache Gleichung\n",
-    "Die Differentialgleichung lautet:\n",
-    "\n",
-    "$$\n",
-    "\\sigma j \\omega A_\\phi - \\left( \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) + \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) \\right) = j_\\phi\n",
-    "$$\n",
-    "\n",
-    "Die schwache Formulierung ergibt sich, indem man beide Seiten mit einer Testfunktion  $v \\in H^1$ (komplexwertiger FE-Raum) multipliziert und über das Gebiet  $\\Omega$ integriert:\n",
+    "Die schwache Formulierung ergibt sich, indem man beide Seiten der Differentialgeleichung {eq}`eq:Arotsym` mit einer Testfunktion  $v \\in H^1$ (komplexwertiger FE-Raum) multipliziert und über das Gebiet  $\\Omega$ integriert:\n",
     "\n",
     "$$\n",
     "\\int_\\Omega \\left( \\sigma j \\omega A_\\phi v - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v - \\frac{\\partial}{\\partial z} \\left( \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\right) v \\right) \\, d\\Omega = \\int_\\Omega j_\\phi v \\, d\\Omega\n",
     "$$\n",
     "\n",
-    "Das Teilintegral mit zwei Ableitungen nach $r$ lässt sich u.A. durch partielle Integration vereinfachen.\n",
+    "Das Teilintegral mit zwei Ableitungen nach $r$ lässt sich durch partielle Integration und die Produktregel vereinfachen.\n",
     "\n",
-    "$$ \\frac{\\partial (r A_\\phi)}{\\partial r}=A_\\phi + r \\frac{\\partial (A_\\phi)}{\\partial r} \\quad (Produktregel)$$\n",
+    "$$ \\frac{\\partial (r A_\\phi)}{\\partial r}=A_\\phi + r \\frac{\\partial (A_\\phi)}{\\partial r} \\quad \\text{(Produktregel)}$$\n",
     "\n",
     "$$\n",
     "\\begin{aligned} \\int_\\Omega - \\frac{\\partial}{\\partial r} \\left( \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} \\right) v \\, d\\Omega &= \\underbrace{ \\left[ - \\frac{\\mu^{-1}}{r} \\frac{\\partial (r A_\\phi)}{\\partial r} v \\right]_{\\partial\\Omega}}_{=0} +\n",
@@ -158,15 +211,17 @@
     "\\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega\n",
     "$$\n",
     "\n",
-    "Die schwache Formulierung der Differentialgleichung lautet:\n",
+    "Die schwache Formulierung der Differentialgleichung lautet\n",
     "\n",
-    "> $$ \\underbrace{ \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega }_{\\text{Bilinearform } a(A_\\phi, v)} = \\underbrace{ \\int_\\Omega j_\\phi v \\, d\\Omega }_{\\text{Linearfrom }  f(v)}, \\quad \\forall v \\in H^1$$\n",
+    "> $$ \\underbrace{ \\int_\\Omega \\sigma j \\omega A_\\phi v  + \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} + \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega }_{\\text{Bilinearform } a(A_\\phi, v)} = \\underbrace{ \\int_\\Omega j_\\phi v \\, d\\Omega }_{\\text{Linearform }  f(v)}, \\quad \\forall v \\in H^1$$(eq:schwacheGlgWirbelstrom)\n",
     "\n",
-    "wobei die Bilinearform  $a(A_\\phi, v)$  durch die folgenden Terme definiert ist:\n",
+    "wobei die Bilinearform  $a(A_\\phi, v)$  durch die Terme\n",
     "\n",
     "$$\n",
     "a(A_\\phi, v) = \\int_\\Omega \\sigma j \\omega A_\\phi v \\, d\\Omega + \\int_\\Omega \\mu^{-1} \\left( \\frac{A_\\phi}{r} +  \\frac{\\partial A_\\phi}{\\partial r} \\right)  \\frac{\\partial v}{\\partial r} \\, d\\Omega  + \\int_\\Omega \\mu^{-1} \\frac{\\partial A_\\phi}{\\partial z} \\frac{\\partial v}{\\partial z} \\, d\\Omega\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "definiert ist."
    ]
   }
  ],
